--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -93,6 +93,9 @@
     <!--<script src="js/scripts/angular-strap-master/dist/modules/popover.js"></script>-->
 
     <script src = "js/scripts/faker.js" type = "text/javascript"></script>
+    <script src="js/scripts/moment.js" type="text/javascript"></script>
+    <script src="js/scripts/angular-moment.js" type="text/javascript"></script>
+
 
     <!--nase-->
     <script src="/js/app.js" type="text/javascript"></script>
@@ -130,28 +133,14 @@
       ng-controller="indexController">
 
 
+
 <!--<div nwt-meni ng-show="authenticated"></div>-->
 
-<section layout="row" flex>
-    <md-sidenav class="md-sidenav-left md-whiteframe-z2"
-                ng-show="authenticated"
-                md-is-locked-open="$mdMedia('gt-md')"
-                md-component-id="left">
-        <div ng-controller="sideNavCtrl">
-            <md-toolbar>
-                <h1 class="md-toolbar-tools">Sidenav</h1>
-            </md-toolbar>
-            <md-content layout-padding layout-fill>
-                <md-list>
-                    <md-list-item ng-repeat="link in linkovi">
-                        <a href="{{hashIt(link.url)}}">{{link.label}}</a>
-                    </md-list-item>
-                </md-list>
-            </md-content>
-        </div>
-    </md-sidenav>
-    <div layout="column" layout-fill>
-        <md-toolbar ng-show="authenticated" ng-controller="mainToolbarCtrl" flex="none" >
+<!--<section layout="row" flex>-->
+
+    <!--<div layout="column" layout-fill>-->
+        <md-toolbar ng-show="authenticated" md-scroll-shrink
+                    ng-controller="mainToolbarCtrl" flex="none" >
             <div class="md-toolbar-tools">
                 <md-button class="md-icon-button">
                     <ng-md-icon icon="menu" ng-click="toggleNavBar()"
@@ -185,22 +174,41 @@
 
             </div>
         </md-toolbar>
-        <md-content flex>
-            <div layout="column" layout-align="center center" flex ng-show="isLoading">
-                <md-progress-circular md-mode="indeterminate"></md-progress-circular>
-            </div>
-            <span ng-hide="isLoading" ng-view=""></span>
+        <!--<md-content flex>-->
+
+            <md-content ng-view=""></md-content>
+            <!--<div layout="column" layout-align="center center" flex ng-show="isLoading">-->
+                <!--<md-progress-circular md-mode="indeterminate"></md-progress-circular>-->
+            <!--</div>-->
+        <!--</md-content>-->
+        <md-sidenav class="md-sidenav-left md-whiteframe-z2"
+            ng-show="authenticated"
+
+            md-component-id="left">
+    <!--md-is-locked-open="$mdMedia('gt-md')"-->
+    <div ng-controller="sideNavCtrl">
+        <md-toolbar>
+            <h1 class="md-toolbar-tools">Sidenav</h1>
+        </md-toolbar>
+        <md-content layout-padding layout-fill>
+            <md-list>
+                <md-list-item ng-repeat="link in linkovi">
+                    <a href="{{hashIt(link.url)}}">{{link.label}}</a>
+                </md-list-item>
+            </md-list>
         </md-content>
-        <!--<div flex="none">footer?</div>-->
     </div>
+</md-sidenav>
+        <!--<div flex="none">footer?</div>-->
+    <!--</div>-->
 
-</section>
+<!--</section>-->
 
-<section ng-hide="authenticated">
-    <footer layout="row" layout-align="center center">
-        <prevod-odabir></prevod-odabir>
-    </footer>
-</section>
+<!--<section ng-hide="authenticated">-->
+    <!--<footer layout="row" layout-align="center center">-->
+        <!--<prevod-odabir></prevod-odabir>-->
+    <!--</footer>-->
+<!--</section>-->
 <!--<div ng-controller="homeController">-->
     <!--{{name}}-->
     <!--<div ng-show="logovan">-->
