--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -139,7 +139,7 @@
 <!--<section layout="row" flex>-->
 
     <!--<div layout="column" layout-fill>-->
-        <md-toolbar ng-show="authenticated" md-scroll-shrink
+        <md-toolbar ng-show="authenticated"
                     ng-controller="mainToolbarCtrl" flex="none" >
             <div class="md-toolbar-tools">
                 <md-button class="md-icon-button">
