--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -48,7 +48,7 @@
     <script src="js/scripts/angular-translate-loader-static-files.js"></script>
 
     <!--<link rel="stylesheet" href="js/scripts/quantumui-1.0.0/css/bootstrap-quantumui.css" >-->
-    <!--<script src="js/scripts/moment-with-locales.min.js"></script>-->
+    <script src="js/scripts/moment-with-locales.min.js"></script>
     <!--<script src="js/scripts/quantumui-1.0.0/js/quantumui-all.js"></script>-->
 
     <!--<script src="js/scripts/angular-strap-master/dist/angular-strap.js"></script>-->
@@ -93,7 +93,7 @@
     <!--<script src="js/scripts/angular-strap-master/dist/modules/popover.js"></script>-->
 
     <script src = "js/scripts/faker.js" type = "text/javascript"></script>
-    <script src="js/scripts/moment.js" type="text/javascript"></script>
+    <!--<script src="js/scripts/moment.js" type="text/javascript"></script>-->
     <script src="js/scripts/angular-moment.js" type="text/javascript"></script>
 
 
@@ -143,7 +143,7 @@
                     ng-controller="mainToolbarCtrl" flex="none" >
             <div class="md-toolbar-tools">
                 <md-button class="md-icon-button">
-                    <ng-md-icon icon="menu" ng-click="toggleNavBar()"
+                    <ng-md-icon icon="menu" ng-click="toggleNavBar('left')"
                                 style="fill: black">
                     </ng-md-icon>
                 </md-button>
@@ -151,19 +151,22 @@
                 <span flex></span>
                 {{localUser.name}}
                 <!--<div>-->
-                <span uib-popover="myPopoverTemplate.html"
-                      popover-placement="bottom-right">
+                <!--<span uib-popover="myPopoverTemplate.html"-->
+                      <!--popover-placement="bottom-right">-->
 
-                <md-button class="md-icon-button" >
+                <!--<span >-->
+                <md-button class="md-icon-button"ng-click="toggleNavBar('userInfo')" >
 
                     <ng-md-icon icon="person"
-                                style="fill: black">
-                    </ng-md-icon>
 
-                </md-button>
-                                </span>
-                <span ng-click="logout()">logout&nbsp;&nbsp;</span>
-                <prevod-odabir></prevod-odabir>
+                                style="fill: black">
+                    </ng-md-icon></md-button>
+                    <!--<ng-md-icon icon="arrow_drop_down" style="fill: black"></ng-md-icon>-->
+
+
+                    <!--</span>-->
+                                <!--</span>-->
+
                 <!--<md-input-container>-->
                     <!--<md-select ng-model="jezik">-->
                         <!--<md-option ng-repeat="j in jezici" value="{{j}}">{{j}}</md-option>-->
@@ -176,11 +179,39 @@
         </md-toolbar>
         <!--<md-content flex>-->
 
-            <md-content ng-view=""></md-content>
+<md-content flex>
+            <span ng-view=""></span>
             <!--<div layout="column" layout-align="center center" flex ng-show="isLoading">-->
                 <!--<md-progress-circular md-mode="indeterminate"></md-progress-circular>-->
             <!--</div>-->
         <!--</md-content>-->
+<md-sidenav class="md-sidenav-right"
+            md-component-id="userInfo" style="background-color: unset;">
+    <md-content ng-controller="userInfoCtrl" style="background-color: unset;">
+        <!--<md-tabs md-dynamic-height md-border-bottom>-->
+            <!--<md-tab label="*">-->
+                <md-card layout="column">
+                    <!--<md-card-header>header</md-card-header>-->
+                    <md-tabs md-dynamic-height md-border-bottom="">
+                        <md-tab label="*">
+                            <prevod-odabir></prevod-odabir>
+                        </md-tab>
+                    </md-tabs>
+                    <md-card-footer>
+                        <!--layout="row" layout-align="begin"-->
+                        <md-button> <span ng-click="logout()" translate="LOGOUT">logout</span></md-button>
+
+                    </md-card-footer>
+                </md-card>
+                <!--<md-content>-->
+                    <!---->
+                    <!---->
+                <!--</md-content>-->
+            <!--</md-tab>-->
+        <!--</md-tabs>-->
+    </md-content>
+</md-sidenav>
+
         <md-sidenav class="md-sidenav-left md-whiteframe-z2"
             ng-show="authenticated"
 
@@ -199,6 +230,7 @@
         </md-content>
     </div>
 </md-sidenav>
+</md-content>
         <!--<div flex="none">footer?</div>-->
     <!--</div>-->
 
