--- a/src/main/resources/static/js/app/parts/editKomentar.html
+++ b/src/main/resources/static/js/app/parts/editKomentar.html
@@ -1,7 +1,7 @@
 <!--https://klarsys.github.io/angular-material-icons/-->
 <md-dialog aria-label="Mango (Fruit)" ng-controller="noviItemModalCtrl">
     <md-toolbar layout-padding>
-        Uredi komentar
+        <span translate="COMMENT.EDIT">Uredi komentar</span>
     </md-toolbar>
     <md-content class="md-padding">
         <form name="form">
@@ -20,7 +20,7 @@
                   </md-input-container> -->
 
                 <md-input-container class="md-block">
-                    <label TRANSLATE="Text"> Tekst: </label>
+                    <label TRANSLATE="COMMENT.TEXT"> Tekst: </label>
                     <input type="text" name="tekst"
                            required
                            ng-model="item.tekst"/>
@@ -33,7 +33,7 @@
     </md-content>
     <div class="md-actions" layout="row">
         <span flex></span>
-        <md-button ng-click="answer(null)"> Cancel </md-button>
-        <md-button ng-click="answer(item)" class="md-primary"> Save </md-button>
+        <md-button ng-click="answer(null)" translate="CANCEL"> Cancel </md-button>
+        <md-button ng-click="answer(item)" class="md-primary" translate="SAVE"> Save </md-button>
     </div>
 </md-dialog>
