--- a/src/main/resources/static/js/app/parts/editRelacijaDokument.html
+++ b/src/main/resources/static/js/app/parts/editRelacijaDokument.html
@@ -1,7 +1,7 @@
 <!--https://klarsys.github.io/angular-material-icons/-->
 <md-dialog aria-label="Mango (Fruit)" ng-controller="noviItemModalCtrl">
     <md-toolbar layout-padding>
-        Uredi relacija dokument
+        <span translate="R_DOCUMENT.EDIT">Uredi relaciju dokumenta</span>
     </md-toolbar>
     <md-content class="md-padding">
         <form name="form">
@@ -16,7 +16,7 @@
                   </md-input-container> -->
 
                 <md-input-container class="md-block">
-                    <label TRANSLATE="Title_BA"> Naziv BA: </label>
+                    <label TRANSLATE="TITLE_BA"> Naziv BA: </label>
                     <input type="text" name="nazivba"
                            required
                            ng-model="item.nazivba"/>
@@ -26,7 +26,7 @@
                 </md-input-container>
 
                 <md-input-container class="md-block">
-                    <label TRANSLATE="Title_EN"> Naziv EN: </label>
+                    <label TRANSLATE="TITLE_EN"> Naziv EN: </label>
                     <input type="text" name="naziven"
                            required
                            ng-model="item.naziven"/>
@@ -39,7 +39,7 @@
     </md-content>
     <div class="md-actions" layout="row">
         <span flex></span>
-        <md-button ng-click="answer(null)"> Cancel </md-button>
-        <md-button ng-click="answer(item)" class="md-primary"> Save </md-button>
+        <md-button ng-click="answer(null)" translate="CANCEL"> Cancel </md-button>
+        <md-button ng-click="answer(item)" class="md-primary" translate="SAVE"> Save </md-button>
     </div>
 </md-dialog>
