--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -214,9 +214,9 @@
 
         <md-sidenav class="md-sidenav-left md-whiteframe-z2"
             ng-show="authenticated"
-                    md-is-locked-open="$mdMedia('gt-md')"
+
             md-component-id="left">
-    <!---->
+    <!--md-is-locked-open="$mdMedia('gt-md')"-->
     <div ng-controller="sideNavCtrl">
         <md-toolbar>
             <h1 class="md-toolbar-tools">Sidenav</h1>
