prevod svega; ispravke modela i repozitorija (json ignore); brisanje komentara, dokumenata i relacija dokumenata; edit korisnika i uloga

--- a/src/main/resources/static/js/app/loginA.html
+++ b/src/main/resources/static/js/app/loginA.html
@@ -19,7 +19,7 @@
             </md-toolbar>
             <form role="form" ng-submit="login()" ng-enter="login()" name="loginForm">
                 <md-input-container class="md-block">
-                    <label translate="USERNAME"> User Name :  </label>
+                    <label translate="USER_NAME"> User Name:  </label>
                     <input type="text" name="username"
                            required
                            ng-model="user.username"/>
