--- a/src/main/resources/static/js/app/parts/editKomentar.html
+++ b/src/main/resources/static/js/app/parts/editKomentar.html
@@ -6,7 +6,7 @@
     <md-content class="md-padding">
         <form name="form">
             <div layout-gt-xs="row">
-                <md-datepicker ng-model="item.kreiran" md-placeholder="Enter date"></md-datepicker>
+                <md-datepicker ng-model="item.kreiran" md-placeholder="{{'COMMENT.DATE' | translate}}"></md-datepicker>
             </div>
             <div layout-gt-xs="row">
                 <!--  <md-input-container class="md-block">
