--- a/src/main/resources/static/js/app/parts/editUloga.html
+++ b/src/main/resources/static/js/app/parts/editUloga.html
@@ -1,14 +1,6 @@
-<!--https://klarsys.github.io/angular-material-icons/-->
 <md-dialog aria-label="Mango (Fruit)" ng-controller="noviItemModalCtrl">
     <md-toolbar layout-padding>
-        <span translate="ROLE.NEW">Nova uloga</span>
-            <!--<h4>Nova uloga</h4>-->
-        <!--<span flex></span>-->
-            <!--<md-button class="md-icon-button" ng-click="cancel()">-->
-                <!--<md-icon icon="close"-->
-                         <!--style="fill: black"-->
-                         <!--aria-label="Close dialog"></md-icon>-->
-            <!--</md-button>-->
+        <span translate="ROLE.EDIT">Uredi ulogu</span>
     </md-toolbar>
     <md-content class="md-padding">
         <form name="form">
