Odvojeni view i controller

--- a/src/main/resources/static/js/app/parts/meni.html
+++ b/src/main/resources/static/js/app/parts/meni.html
@@ -27,6 +27,8 @@
                         <!--<li><a href="/api">Api HAL browser</a></li>-->
                         <!--&lt;!&ndash;<li><a href="#/korisnik">Korisnik</a></li>&ndash;&gt;-->
                         <!--<li><a href="/console">H2 - konzola</a></li>-->
+                        <li><a href="#/user/dokumenti">Docs</a></li>
+
                         <li><a href="#/admin/korisnik">korisnici</a></li>
                         <li><a href="#/admin/akcija">akcije</a></li>
                         <li><a href="#/admin/uloga">uloge</a></li>
