--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -115,6 +115,9 @@
     <script src="/js/app/admin/administracijaRelacijaDokumentController.js" type="text/javascript"></script>
     <script src="/js/app/admin/administracijaDogadjajaController.js" type="text/javascript"></script>
     <script src="/js/app/admin/administracijaRelacijaKorisnikController.js" type="text/javascript"></script>
+
+    <script src="js/scripts/uploadtestController.js"></script>
+
     <base href="/" />
     <script type="text/ng-template" id="myPopoverTemplate.html">
         <span style="color: rebeccapurple">
@@ -132,7 +135,7 @@
       layout="column"
       ng-controller="indexController">
 
-
+    <a href="#/user/dokumenti">Docs</a>
 
 <!--<div nwt-meni ng-show="authenticated"></div>-->
 
@@ -272,20 +275,6 @@
         <!--&lt;!&ndash;</div>&ndash;&gt;-->
     <!--</footer>-->
 
-
-<!--<div class="navbar-fixed-bottom" ng-controller="uploadtestController">-->
-    <!--<h2>test upload</h2>-->
-    <!--&lt;!&ndash;<form method="POST" enctype="multipart/form-data" action="/upload">-->
-        <!--<table>-->
-            <!--<tr><td>File to upload:</td><td><input type="file" name="file" /></td></tr>-->
-            <!--<tr><td>Name:</td><td><input type="text" name="name" /></td></tr>-->
-            <!--<tr><td></td><td><input type="submit" value="Upload" /></td></tr>-->
-        <!--</table>-->
-    <!--</form>&ndash;&gt;-->
-    <!--<input type="file" value="Nova verzija" file-model="file" class="btn btn-default btn-block" />-->
-    <!--<input type="button" value="Upload" ng-click="newVersion()" />-->
-    <!--<footer>footer 2015/2016</footer>-->
-<!--</div>-->
 
 <!--<form method="POST" enctype="multipart/form-data" action="/upload">
     <table>
