--- a/src/main/resources/static/js/app/home/home.html
+++ b/src/main/resources/static/js/app/home/home.html
@@ -2,27 +2,38 @@
 <span ng-controller="homeController" layout="column" flex layout-fill ng-cloak="">
     <md-toolbar md-scroll-shrink>
         <div class="md-toolbar-tools">
-            <span flex>MOji dokumenti</span>
-            <md-button class="md-icon-button">
-                <ng-md-icon icon="add" ng-click="newDialog($event)"
-                            style="fill: black"></ng-md-icon>
-            </md-button>
-            <md-button class="md-icon-button">
-                <ng-md-icon icon="cached" ng-click="loadStuff()"
-                            style="fill: black"></ng-md-icon>
-            </md-button>
+            <span flex="50">Dokumenti</span>
 
+            <span flex="20">Vlasnik</span>
+            <span flex="20">Azurirano</span>
+            <span flex="10" >
+                <div layout="row" layout-align="end end">
+                    <md-button class="md-icon-button">
+                        <ng-md-icon icon="add" ng-click="newDialog($event)"
+                                    style="fill: black"></ng-md-icon>
+                    </md-button>
+                    <md-button class="md-icon-button">
+                        <ng-md-icon icon="cached" ng-click="loadStuff()"
+                                    style="fill: black"></ng-md-icon>
+                    </md-button>
+                </div>
+            </span>
         </div>
     </md-toolbar>
     <md-content>
 
         <section>
-            <md-subheader><span translate="TODAY">Danas</span></md-subheader>
+            <md-subheader>
+                <span translate="TODAY">Danas</span>
+            </md-subheader>
 
             <md-list layout-padding>
                 <md-list-item ng-repeat="doc in docFilterDanas">
-                    <doc-list-item></doc-list-item>
-            </md-list-item>
+                    <span  layout-fill>
+                    <doc-list-item doc="doc" details="otvoriDetalje()"></doc-list-item>
+                        </span>
+                    <!--<md-divider ng-if="!$last"></md-divider>-->
+                </md-list-item>
             </md-list>
         </section>
         <section >
@@ -30,13 +41,16 @@
 
 
             <md-list layout-padding>
-                <md-list-item ng-repeat="doc in docFilterOstali">
-                    <doc-list-item></doc-list-item>
+                <md-list-item ng-repeat="doc in docFilterOstali" >
+                    <span  layout-fill>
+                    <doc-list-item doc="doc" details="otvoriDetalje()"></doc-list-item>
+                        </span>
+                    <!--<md-divider ng-if="!$last"></md-divider>-->
                 </md-list-item>
             </md-list>
         </section>
 <span flex></span>
-    <footer layout="row">
+    <footer>
 
         <md-table-pagination md-limit="query.limit"
                              md-limit-options="limitOptions"
