--- a/src/main/resources/static/js/app/parts/docListItem.html
+++ b/src/main/resources/static/js/app/parts/docListItem.html
@@ -1,48 +1,116 @@
-<md-card layout="row" layout-fill>
-    <!--<md-card-header>-->
-    <div layout="column" layout-align="center center">
-        <md-card-avatar >
-            <ng-md-icon icon="insert_drive_file" style="fill:black"/>
-        </md-card-avatar>
-    </div>
-    <!--</md-card-header>-->
-    <div layout="row" layout-padding>
-        text: {{doc.tekst}}<br/>
-
-
-        <time title="{{ doc.azuriran | amDateFormat: 'dddd, MMMM Do YYYY, h:mm a' }}">
-            azuriran: {{ doc.azuriran | amCalendar }}
-        </time>
-        <!--<br/>-->
-        <time title="{{ doc.istice | amDateFormat: 'dddd, MMMM Do YYYY, h:mm a' }}">
-            istice: {{ doc.istice | amCalendar }}
-        </time>
-        <!--<br/>-->
-        <time title="{{ doc.kreiran | amDateFormat: 'dddd, MMMM Do YYYY, h:mm a' }}">
-            kreiran: {{ doc.kreiran | amCalendar }}
-        </time>
-        <span>korisnik: {{doc.korisnikSet._embeddedItems[0].username}}</span>
-        <!--{{doc.azuriran}}-->
-        <!--<br/>-->
-    </div>
-    <span flex></span>
-    <div layout="column" layout-align="end end">
-        <md-menu >
-            <!--md-offset="0 -7"-->
-            <md-button class="md-icon-button" ng-click="$mdOpenMenu($event)">
-                <ng-md-icon icon="more_vert" style="fill: black"></ng-md-icon>
+<span layout="row" class="md-list-item-text">
+    <!---->
+    <span flex="50" layout="row">
+        <!--<span >-->
+            <!--<md-card-avatar>-->
+                <!--<ng-md-icon icon="insert_drive_file" style="fill:black"/>-->
+            <!--</md-card-avatar>-->
+        <!--</span>-->
+        <md-chips>
+            <md-chip>
+                status
+            </md-chip>
+        </md-chips>
+            <md-button class="md-icon-button" ng-click="download()">
+                <ng-md-icon icon="file_download"></ng-md-icon>
             </md-button>
-            <!--<md-button aria-label="Open demo menu" class="md-icon-button" >-->
-            <!--<md-icon md-menu-origin md-svg-icon="call:email"></md-icon>-->
+
+        <div>oznaka: {{doc.oznaka}}</div>
+        <div>tekst: {{doc.tekst}}</div>
+
+    </span>
+    <span flex="20">
+        <!--<ng-md-icon icon="person_pin" style="fill:black"></ng-md-icon>-->
+
+        <p>{{doc.korisnikSet._embeddedItems[0].username}}</p>
+    </span>
+    <span flex="20">
+        <time title="{{ doc.azuriran | amDateFormat: 'dddd, MMMM Do YYYY, h:mm a' }}">
+            {{ doc.azuriran | amCalendar }}
+        </time>
+    </span>
+    <span flex="10">
+           <div layout="column" layout-align="end end">
+               <md-menu >
+                   <!--md-offset="0 -7"-->
+                   <md-button class="md-icon-button" ng-click="$mdOpenMenu($event)">
+                       <ng-md-icon icon="more_vert" style="fill: black"></ng-md-icon>
+                   </md-button>
+                   <!--<md-button aria-label="Open demo menu" class="md-icon-button" >-->
+                   <!--<md-icon md-menu-origin md-svg-icon="call:email"></md-icon>-->
+                   <!--</md-button>-->
+                   <md-menu-content width="4">
+                       <md-menu-item ng-repeat="item in [1, 2, 3]">
+                           <md-button ng-click="dumdum()"> <span md-menu-align-target>Option</span> {{item}} </md-button>
+                       </md-menu-item>
+                       <md-menu-divider></md-menu-divider>
+                       <md-menu-item>
+                           <md-button ng-click="details()">
+                               <span md-menu-align-taget>Detalji</span>
+                           </md-button>
+                       </md-menu-item>
+                   </md-menu-content>
+               </md-menu>
+
+           </div>
+    </span>
+    <!--<md-card-header>-->
+                <!--<span flex="50">Dokumenti</span>-->
+
+            <!--<span flex="25">Vlasnik</span>-->
+            <!--<span flex="25">Azurirano</span>-->
+    <!--<div layout="column" flex>-->
+        <!--&lt;!&ndash;&ndash;&gt;-->
+        <!--<md-card-avatar >-->
+            <!--<ng-md-icon icon="insert_drive_file" style="fill:black"/>-->
+
+        <!--</md-card-avatar>-->
+        <!--&lt;!&ndash;<md-chips>&ndash;&gt;-->
+            <!--&lt;!&ndash;<md-chip>StaticStatus</md-chip>&ndash;&gt;-->
+        <!--&lt;!&ndash;</md-chips>&ndash;&gt;-->
+    <!--</div>-->
+    <!--&lt;!&ndash;</md-card-header>&ndash;&gt;-->
+    <!--<div layout="row" layout-padding>-->
+        <!--text: {{doc.tekst}}<br/>-->
+
+
+        <!--<time title="{{ doc.azuriran | amDateFormat: 'dddd, MMMM Do YYYY, h:mm a' }}">-->
+            <!--azuriran: {{ doc.azuriran | amCalendar }}-->
+        <!--</time>-->
+        <!--&lt;!&ndash;<br/>&ndash;&gt;-->
+        <!--<time title="{{ doc.istice | amDateFormat: 'dddd, MMMM Do YYYY, h:mm a' }}">-->
+            <!--istice: {{ doc.istice | amCalendar }}-->
+        <!--</time>-->
+        <!--&lt;!&ndash;<br/>&ndash;&gt;-->
+        <!--&lt;!&ndash;<time title="{{ doc.kreiran | amDateFormat: 'dddd, MMMM Do YYYY, h:mm a' }}">&ndash;&gt;-->
+            <!--&lt;!&ndash;kreiran: {{ doc.kreiran | amCalendar }}&ndash;&gt;-->
+        <!--&lt;!&ndash;</time>&ndash;&gt;-->
+
+        <!--<span>-->
+            <!--<ng-md-icon icon="person_pin" style="fill:black"></ng-md-icon>-->
+            <!--{{doc.korisnikSet._embeddedItems[0].username}}-->
+        <!--</span>-->
+        <!--&lt;!&ndash;{{doc.azuriran}}&ndash;&gt;-->
+        <!--&lt;!&ndash;<br/>&ndash;&gt;-->
+    <!--</div>-->
+    <!--<span flex></span>-->
+    <!--<div layout="column" layout-align="end end">-->
+        <!--<md-menu >-->
+            <!--&lt;!&ndash;md-offset="0 -7"&ndash;&gt;-->
+            <!--<md-button class="md-icon-button" ng-click="$mdOpenMenu($event)">-->
+                <!--<ng-md-icon icon="more_vert" style="fill: black"></ng-md-icon>-->
             <!--</md-button>-->
-            <md-menu-content width="4">
-                <md-menu-item ng-repeat="item in [1, 2, 3]">
-                    <md-button ng-click="dummyDoc(doc,item)"> <span md-menu-align-target>Option</span> {{item}} </md-button>
-                </md-menu-item>
-            </md-menu-content>
-        </md-menu>
+            <!--&lt;!&ndash;<md-button aria-label="Open demo menu" class="md-icon-button" >&ndash;&gt;-->
+            <!--&lt;!&ndash;<md-icon md-menu-origin md-svg-icon="call:email"></md-icon>&ndash;&gt;-->
+            <!--&lt;!&ndash;</md-button>&ndash;&gt;-->
+            <!--<md-menu-content width="4">-->
+                <!--<md-menu-item ng-repeat="item in [1, 2, 3]">-->
+                    <!--<md-button ng-click="dummyDoc(doc,item)"> <span md-menu-align-target>Option</span> {{item}} </md-button>-->
+                <!--</md-menu-item>-->
+            <!--</md-menu-content>-->
+        <!--</md-menu>-->
 
-    </div>
+    <!--</div>-->
 
 
-</md-card>
+</span>
