dodavanje statusa na dokument

--- a/src/main/resources/static/js/app/parts/docListItem.html
+++ b/src/main/resources/static/js/app/parts/docListItem.html
@@ -8,7 +8,7 @@
         <!--</span>-->
         <md-chips>
             <md-chip aria-label="FAB">
-                status
+                {{doc.statusSet._embeddedItems[0].nazivba}}
             </md-chip>
         </md-chips>
             <md-button class="md-icon-button" ng-click="download()" aria-label="FAB">
